--- a/pesto.html
+++ b/pesto.html
@@ -5,11 +5,30 @@
 
         <script id="book-list-template" type="text/x-handlebars-template">
             <ul>
+                Basil files read:
+            {{#each basilFiles}}
+                <li>{{.}}</li>
+            {{else}}
+                None
+            {{/each}}
+            </ul>
+
+            <ul>
+                Barcode files read:
+            {{#each barcodeFiles}}
+                <li>{{.}}</li>
+            {{else}}
+                None
+            {{/each}}
+            </ul>
+
+
+            <ul>
                 <li>books in inventory: {{stats.numBooks}}</li>
                 <li>barcodes read: {{stats.numBarcodesRead}}</li>
             </ul>
 
-            <table id="totals">
+            <table id="totals" class="totals">
                 <thead>
                     <th>Book count before</th>
                     <th>Dollar amount before</th>
@@ -33,8 +52,36 @@
                 </tbody>
             </table>
 
-            <ul>
-                Barcodes not matched:
+            {{#each statsBySection}}
+                <h3>Section: {{@key}}</h3>
+                <table id="totals-section{{@index}}" class="totals">
+                    <thead>
+                        <th>Book count before</th>
+                        <th>Dollar amount before</th>
+                        <th>Book count after</th>
+                        <th>Dollar amount after</th>
+                        <th>Books removed</th>
+                        <th>Dollars removed</th>
+                        <th>% books removed</th>
+                        <th>% dollars removed</th>
+                    </thead>
+
+                    <tbody>
+                        <td>{{this.numBooks}}</td>
+                        <td>${{this.totalDollarBefore}}</td>
+                        <td>{{this.foundNoExtra}}</td>
+                        <td>${{this.totalDollarAfter}}</td>
+                        <td>{{this.missing}}</td>
+                        <td>${{this.totalDollarRemoved}}</td>
+                        <td>{{this.percentBooksRemoved}}</td>
+                        <td>{{this.percentBooksRemoved}}</td>
+                    </tbody>
+                </table>
+            {{/each}}
+
+
+            <ul class="collapsible collapsed">
+                Barcodes not matched (click to view)
             {{#each extraBooks}}
                 <li>{{.}}</li>
             {{else}}
@@ -46,11 +93,14 @@
                 <thead>
                     <tr>
                         <th>Barcode</th>
+                        <th>Id</th>
                         <th>Price</th>
                         <th>OH</th>
-                        <th>Authors</th>
+                        <th style="width: 180px;">Authors</th>
                         <th>Title</th>
+                        <th>Binding</th>
                         <th>Location</th>
+                        <th style="min-width: 60px;">Last in</th>
                         <th>Found</th>
                     </tr>
                 </thead>
@@ -59,11 +109,14 @@
                     {{#each books}}
                         <tr>
                             <td>{{barcode}}</td>
+                            <td>{{id}}</td>
                             <td>{{price}}</td>
                             <td>{{onHand}}</td>
                             <td>{{authors}}</td>
                             <td>{{title}}</td>
+                            <td>{{binding}}</td>
                             <td>{{location}}</td>
+                            <td {{#if isRecent}}class="isRecent"{{/if}}>{{lastIn}}</td>
                             <td {{#if difference}}class="difference"{{/if}}>{{found}}/{{onHand}}</td>
                         </tr>
                     {{/each}}
@@ -79,12 +132,12 @@
 
 
             <div class="basil-input">
-                <label for="basil-file">Basil export file:</label>
+                <label for="basil-file">Click to add a Basil export file:</label>
                 <input type="file" id="basil-file" name="basil-file" />
             </div>
 
             <div class="barcode-input" style="display: none">
-                <label for="barcode-file">Barcode export file:</label>
+                <label for="barcode-file">Click to add a barcode scan file:</label>
                 <input type="file" id="barcode-file" name="barcode-file" />
             </div>
 
