Fixed recent books adjustments when missing
Recent books that have been adjusted now show a
blue count, indicating that not all of them were
found.

Adjusted books are reset every time new barcode
files are loaded (but you can’t partially load
recent books because of the adjustments).

--- a/pesto.html
+++ b/pesto.html
@@ -123,7 +123,7 @@
                             <td>{{location}}</td>
                             <td>{{itemTypeId}}</td>
                             <td {{#if isRecent}}class="isRecent"{{/if}}>{{lastIn}}</td>
-                            <td {{#if difference}}class="difference"{{/if}}>{{found}}/{{onHand}}</td>
+                            <td {{#if difference}}class="{{#if adjusted}}adjusted{{else}}difference{{/if}}"{{/if}}>{{found}}/{{onHand}}</td>
                         </tr>
                     {{/each}}
                 </tbody>
